[CSS] update `.honk`, `honk header img`, [CSS] add `.user-addr-date` [CSS] fix margin/padding/gap

--- a/views/style.css
+++ b/views/style.css
@@ -179,12 +179,15 @@ input[type=file] {
 .honk {
   margin: auto;
   background: var(--bg-dark);
-  border: 1px solid var(--hl);
-  border-radius: 1em;
   margin-bottom: 1em;
+  border: 1px solid var(--hl);
+  /*
+  border-radius: 1em;
   padding-left: 1em;
   padding-right: 1em;
   padding-top: 0;
+  */
+  padding: .75em .75em 0;
   overflow: hidden;
 }
 
@@ -377,9 +380,9 @@ img.emu {
   overflow: hidden;
   font-size: 0.8em;
   line-height: 1.1;
-  margin-top: 1em;
+  margin-top: 0;
   display: flex;
-  gap: 0 .5rem;
+  gap: 0 .75em;
   flex-flow: row nowrap;
 }
 
@@ -407,6 +410,11 @@ img.emu {
 
 .honk header img {
   max-width: unset;
-  width: 4em;
-  height: 4em;
+  width: 3.5em;
+  height: 3.5em;
+}
+
+.user-addr-date time {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
